updated the branding

--- a/pivot-drilldown-and-plot/public/index.html
+++ b/pivot-drilldown-and-plot/public/index.html
@@ -37,6 +37,10 @@
     </head>
 
 <body class="dx-viewport">
+    <div class="banner-title">
+        <img src="dcs-circle.png"/>
+        <h1>Waste Matters Scotland</h1>
+    </div>
     <div class="demo-container">
         <div id="app"></div>
     </div>
