--- a/pivot-drilldown-and-plot/public/index.html
+++ b/pivot-drilldown-and-plot/public/index.html
@@ -38,7 +38,7 @@
 
 <body class="dx-viewport">
     <div class="banner-title">
-        <img src="dcs-circle.png"/>
+        <img src="%PUBLIC_URL%/dcs-circle.png"/>
         <h1>Waste Matters Scotland</h1>
     </div>
     <div class="demo-container">
