hyperlink the title

--- a/pivot-drilldown-and-plot/public/index.html
+++ b/pivot-drilldown-and-plot/public/index.html
@@ -38,8 +38,9 @@
 
 <body class="dx-viewport">
     <div class="banner-title">
-        <img src="%PUBLIC_URL%/dcs-circle.png"/>
-        <h1>Waste Matters Scotland</h1>
+        <a class="navbar-brand" href="https://data-commons-scotland.github.io/dcs-wcs-prototype-3/index.html">
+            <img src="%PUBLIC_URL%/dcs-circle.png"/>Waste Matters Scotland
+        </a>
     </div>
     <div class="demo-container">
         <div id="app"></div>
